--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/qvzlhaun/a513g" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/b11t" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/d12x" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/w8k" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/y4r" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/x12g" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/j3c" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/d10f" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/n9y" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/qvzlhaun/m7h" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/qvzlhaun/d5b" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/quvyemll/o513m" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/quvyemll/n11m" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/quvyemll/a12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/quvyemll/b8s" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/quvyemll/t4m" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/quvyemll/w12q" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/quvyemll/z3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/quvyemll/t10h" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/quvyemll/v9p" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/quvyemll/w7o" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/quvyemll/u5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/5/24/n12133812.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/20200501_shouhui_GettyImages-1202063240-crop-700x420_ccp_01-320x200.jpg"><p align="center">北京教师：小时候知道的很多事都是假的</p></a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/5/24/n12133812.md#1" title="北京教师：小时候知道的很多事都是假的""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/20200501_shouhui_GettyImages-1202063240-crop-700x420_ccp_01-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214603.md#1" title="海外华人：回不了家 击穿我们心理底线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/e8883cf50d60fd986b377ffa8fb54968-320x200.png">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213367.md#1" title="疑被中共渗透 澳工党议员突遭联邦警察搜查""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-06-26-18257-20200626001476405655-original-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212374.md#1" title="美参院通过法案 制裁限制香港自治的个人和公司""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/67@1200x1200-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://pxdgi295.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214402.md#1">【役情最前线】香港道人解析立蛋与中共气数</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214964.md#1">全球退党中心一项倡议 帮人远离瘟疫</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215108.md#1">美议员提法案 支持联邦职员赴台湾学习</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214868.md#1">任贤齐端午节庆生 睽违七年宣布“秘密计划”</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215042.md#1">【视频】遭警暴性侵 香港受害者向国际求助</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212175.md#1">中印边境冲突 军二代称中方2死3伤</a><br>
