--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/ewqzkdmcg/n513y" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/w11s" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/l12g" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/s8y" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/j4j" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/k12c" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/f3x" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/q10f" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/n9i" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/ewqzkdmcg/t7y" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/ewqzkdmcg/v5a" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/qqfhtfwy/j513x" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/b11c" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/y12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/q8h" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/w4y" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/d12l" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/h3s" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/m10r" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/w9o" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/qqfhtfwy/y7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/qqfhtfwy/f5b" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215183.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1S17VD-320x200.jpg"><p align="center">沈舟：主动对抗中共 美国最新战略方向</p></a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215183.md#1" title="沈舟：主动对抗中共 美国最新战略方向""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1S17VD-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/5/24/n12133812.md#1" title="北京教师：小时候知道的很多事都是假的""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/20200501_shouhui_GettyImages-1202063240-crop-700x420_ccp_01-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212964.md#1" title="【内幕】王岐山汪洋与美方交手 铩羽而归""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-871930170-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213367.md#1" title="疑被中共渗透 澳工党议员突遭联邦警察搜查""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-06-26-18257-20200626001476405655-original-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://pxdgi295.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215230.md#1">【美股瞭望】股市跌讯如天空中飘来几片乌云</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215188.md#1">美国逾30个州新病例急增 多州暂缓重启进程</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215243.md#1">【珍言真语】袁弓夷：性侵受害者作证 揭中共罪行</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214402.md#1">【役情最前线】香港道人解析立蛋与中共气数</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215230.md#1">【美股瞭望】股市跌讯如天空中飘来几片乌云</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215188.md#1">美国逾30个州新病例急增 多州暂缓重启进程</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215243.md#1">【珍言真语】袁弓夷：性侵受害者作证 揭中共罪行</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214402.md#1">【役情最前线】香港道人解析立蛋与中共气数</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a><br>
